fix header bugs not visible

--- a/src/styles/AboutMe.module.css
+++ b/src/styles/AboutMe.module.css
@@ -63,7 +63,7 @@
     }
 
     .intro p{
-        font-size: 0.75em;
+        font-size: 0.7em;
     }
 
     .name {
