--- a/src/styles/Skills.module.css
+++ b/src/styles/Skills.module.css
@@ -104,6 +104,7 @@
         transform: rotate(0deg);
         text-align: center;
         margin-bottom: 15px;
+        overflow: visible;
     }
 
     .skillsTab h2{
